27_matrix_input/grade.txt
Grading at Wed 15 Nov 2023 05:26:25 AM UTC
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘main’:
rotateMatrix.c:72:10: error: ‘c’ undeclared (first use in this function)
   72 |    while(c=fgetc(f)!=EOF)
      |          ^
rotateMatrix.c:72:10: note: each undeclared identifier is reported only once for each function it appears in
The code did not compile!

Overall Grade: F
